--- a/php/templates/ORGANIZATION_list.htm
+++ b/php/templates/ORGANIZATION_list.htm
@@ -254,6 +254,19 @@
 								<span class="rnr-searchcontrol">{$searchcontrol1_org_id}</span>
 						</div>
 		{END searchCtrlBlock_org_id}
+																{BEGIN searchCtrlBlock_group_id}
+
+
+		<div class="form-group srchPanelRow {$filterRow_class_group_id}" {$filterRow_attrs_group_id}>
+			<label>{$label ORGANIZATION group_id }</label>
+
+							{$delCtrlButt}
+			
+								<span class="rnr-searchtype">{$searchtype_group_id}</span>
+								<span class="rnr-searchcontrol">{$searchcontrol_group_id}</span>
+								<span class="rnr-searchcontrol">{$searchcontrol1_group_id}</span>
+						</div>
+		{END searchCtrlBlock_group_id}
 																{BEGIN searchCtrlBlock_phone_work}
 
 
@@ -520,7 +533,21 @@
 					<div class="r-top">
 									{BEGIN top_block}
 <div class="r-form" data-location="top" id="form_top_{$pageid}" data-makeup="leftbar" {$form_top} data-pageid="{$pageid}" >		
-	</div>		
+	 
+				<div class="row">
+			 
+				<div 
+	data-cellId="top_c2" data-pageid="{$pageid}"	{$cell_top_c2}
+	class=" r-ori-vert			col-md-12
+	
+">
+		 
+		{BEGIN mastertable_block}
+<div data-itemtype="master_info" data-itemid="master_info" {$item_master_info} data-pageid="{$pageid}">
+	{$showmasterfile}
+</div>
+{END mastertable_block}		</div>					</div>
+			</div>		
 {END top_block}
 						</div>
 											<div class="r-above">
@@ -543,6 +570,14 @@
 							{mlang_message ADD_NEW}			</a>
 </span>
 {END add_link}
+	 
+		{BEGIN inlineadd_link}
+<span data-itemtype="inline_add" data-itemid="inline_add" {$item_inline_add} data-pageid="{$pageid}" data-small data-button-item>
+	<a type="button" title="" class="btn btn-primary   
+	" {$inlineaddlink_attrs} >
+							{mlang_message INLINE_ADD}			</a>
+</span>
+{END inlineadd_link}
 	 
 		{BEGIN deleteselected_link}
 <span data-itemtype="delete" data-itemid="delete" {$item_delete} data-pageid="{$pageid}" data-small data-button-item>
@@ -738,6 +773,9 @@
 			[data-pageid="{$pageid}"][data-itemtype="grid_field"][data-field="phone_work"]:before {
 		content: "{$label ORGANIZATION phone_work}";
 	}
+			[data-pageid="{$pageid}"][data-itemtype="grid_field"][data-field="group_id"]:before {
+		content: "{$label ORGANIZATION group_id}";
+	}
 	}
 </style>
 <table data-location="grid" id="form_grid_{$pageid}" data-makeup="leftbar" {$form_grid} data-pageid="{$pageid}" class=" table table-striped table-bordered r-horizontal-grid  r-flexgrid rnr-b-grid rnr-gridtable"
@@ -822,7 +860,7 @@
 		{BEGIN org_id_fieldheadercolumn}
 	{BEGIN org_id_fieldheader}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="org_id" data-fieldname="org_id" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field7" {$item_simple_grid_field7} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="org_id" data-fieldname="org_id" 
 
 			{$org_id_orderlinkattrs}
 	
@@ -856,7 +894,7 @@
 		{BEGIN org_type_fieldheadercolumn}
 	{BEGIN org_type_fieldheader}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field7" {$item_simple_grid_field7} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="org_type" data-fieldname="org_type" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field8" {$item_simple_grid_field8} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="org_type" data-fieldname="org_type" 
 
 			{$org_type_orderlinkattrs}
 	
@@ -890,7 +928,7 @@
 		{BEGIN company_name_fieldheadercolumn}
 	{BEGIN company_name_fieldheader}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field8" {$item_simple_grid_field8} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="company_name" data-fieldname="company_name" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field9" {$item_simple_grid_field9} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="company_name" data-fieldname="company_name" 
 
 			{$company_name_orderlinkattrs}
 	
@@ -924,7 +962,7 @@
 		{BEGIN display_name_fieldheadercolumn}
 	{BEGIN display_name_fieldheader}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field9" {$item_simple_grid_field9} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="display_name" data-fieldname="display_name" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field10" {$item_simple_grid_field10} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="display_name" data-fieldname="display_name" 
 
 			{$display_name_orderlinkattrs}
 	
@@ -958,7 +996,7 @@
 		{BEGIN email_fieldheadercolumn}
 	{BEGIN email_fieldheader}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field10" {$item_simple_grid_field10} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="email" data-fieldname="email" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field11" {$item_simple_grid_field11} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="email" data-fieldname="email" 
 
 			{$email_orderlinkattrs}
 	
@@ -992,7 +1030,7 @@
 		{BEGIN phone_work_fieldheadercolumn}
 	{BEGIN phone_work_fieldheader}
 <span 
-	data-itemtype="grid_field_label" data-itemid="simple_grid_field11" {$item_simple_grid_field11} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="phone_work" data-fieldname="phone_work" 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field12" {$item_simple_grid_field12} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="phone_work" data-fieldname="phone_work" 
 
 			{$phone_work_orderlinkattrs}
 	
@@ -1009,6 +1047,40 @@
 	
 	</th>
 	{END cellblock_grid_headcell_field5}
+									{BEGIN cellblock_grid_headcell_field6}
+	<th
+	
+	{$cell_grid_headcell_field6}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$group_id_class}	"
+
+			data-field="group_id"
+	
+	data-cellId="grid_headcell_field6" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN group_id_fieldheadercolumn}
+	{BEGIN group_id_fieldheader}
+<span 
+	data-itemtype="grid_field_label" data-itemid="simple_grid_field13" {$item_simple_grid_field13} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="group_id" data-fieldname="group_id" 
+
+			{$group_id_orderlinkattrs}
+	
+	
+	>
+	<span class="text-label">
+		<span>{$label ORGANIZATION group_id }</span>
+					{$arrow_icon_group_id}
+			</span>
+	</span>
+	{END group_id_fieldheader}
+{END group_id_fieldheadercolumn}
+
+	
+	</th>
+	{END cellblock_grid_headcell_field6}
 							</tr>
 																				
 					{END grid_header}
@@ -1044,6 +1116,15 @@
 </span>
 {END edit_link}
 {END edit_column}
+	 
+		{BEGIN inline_cancel}
+<span data-itemtype="grid_inline_cancel" data-itemid="grid_inline_cancel" {$item_grid_inline_cancel} data-pageid="{$pageid}" data-record-id="{$recId}" data-small data-button-item>
+	<a type="button" title="{mlang_message CANCEL}" class="btn-link   
+	 glyphicon glyphicon-remove" {$inlinerevertlink_attrs} title="{mlang_message CANCEL}" >		
+				
+								</a>
+</span>
+{END inline_cancel}
 	 
 		{BEGIN view_column}
 {BEGIN view_link}
@@ -1369,6 +1450,27 @@
 {END phone_work_fieldcolumn}	
 	</td>
 	{END cellblock_grid_cell_field5}
+									{BEGIN cellblock_grid_cell_field6}
+	<td
+	
+	{$cell_grid_cell_field6}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$group_id_class}	"
+
+			data-field="group_id"
+	
+	data-cellId="grid_cell_field6" data-pageid="{$pageid}" data-record-id="{$recId}"	
+	>
+
+	 
+		{BEGIN group_id_fieldcolumn}
+<span data-itemtype="grid_field" data-itemid="simple_grid_field6" {$item_simple_grid_field6} data-pageid="{$pageid}" data-record-id="{$recId}" data-field="group_id" data-fieldname="group_id" data-default-width >
+{$group_id_value}
+</span>
+{END group_id_fieldcolumn}	
+	</td>
+	{END cellblock_grid_cell_field6}
 							</tr>
 											<tr {$rowattrs} {$row_grid_2} class="{$rowclass}
 				
@@ -1561,6 +1663,21 @@
 	
 	</td>
 	{END cellblock_grid_footcell_field5}
+									{BEGIN cellblock_grid_footcell_field6}
+	<td
+	
+	{$cell_grid_footcell_field6}
+	{$recordattrs}
+	class="
+		 r-ori-vert		 {$group_id_class}	"
+
+	
+	data-cellId="grid_footcell_field6" data-pageid="{$pageid}" data-record-id="{$recId}" data-page="ORGANIZATION_list"	
+	>
+
+	
+	</td>
+	{END cellblock_grid_footcell_field6}
 							</tr>
 					
 					</tfoot>
