--- a/php/styles/pages/ORGANIZATION_list.css
+++ b/php/styles/pages/ORGANIZATION_list.css
@@ -16,6 +16,9 @@
 [data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_list"][data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_list"][data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_list"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_list"][data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_list"][data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_list"] {
+  white-space: nowrap;
+}
 [data-cellid="grid_headcell_checkbox"][data-page="ORGANIZATION_list"][data-cellid="grid_headcell_checkbox"][data-page="ORGANIZATION_list"][data-cellid="grid_headcell_checkbox"][data-page="ORGANIZATION_list"] {
   width: 30px;
 }
