--- a/php/styles/pages/ORGANIZATION_masterlist.css
+++ b/php/styles/pages/ORGANIZATION_masterlist.css
@@ -16,6 +16,15 @@
 [data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_masterlist"][data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_masterlist"][data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_masterlist"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_masterlist"][data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_masterlist"][data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_masterlist"] {
+  white-space: nowrap;
+}
+[data-cellid="grid_headcell_icons"][data-page="ORGANIZATION_masterlist"][data-cellid="grid_headcell_icons"][data-page="ORGANIZATION_masterlist"][data-cellid="grid_headcell_icons"][data-page="ORGANIZATION_masterlist"] {
+  width: 30px;
+}
+[data-cellid="grid_cell_icons"][data-page="ORGANIZATION_masterlist"][data-cellid="grid_cell_icons"][data-page="ORGANIZATION_masterlist"][data-cellid="grid_cell_icons"][data-page="ORGANIZATION_masterlist"] {
+  white-space: nowrap;
+}
 [data-page="ORGANIZATION_masterlist"][data-itemid="page_image_ash8f23hr"] {
   width: 400px;
 }
