--- a/php/styles/pages/ORGANIZATION_print.css
+++ b/php/styles/pages/ORGANIZATION_print.css
@@ -16,6 +16,9 @@
 [data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_print"][data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_print"][data-cellid="grid_footcell_field5"][data-page="ORGANIZATION_print"] {
   white-space: nowrap;
 }
+[data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_print"][data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_print"][data-cellid="grid_footcell_field6"][data-page="ORGANIZATION_print"] {
+  white-space: nowrap;
+}
 [data-page="ORGANIZATION_print"][data-itemid="page_image_ash8f23hr"] {
   width: 400px;
 }
