--- a/php/templates/_global_menu.htm
+++ b/php/templates/_global_menu.htm
@@ -388,6 +388,16 @@
 
 	</div>
 
+ 
+
+<div class="bs-welcome-item" data-itemtype="welcome_item" data-itemid="welcome_item9" {$item_welcome_item9} data-pageid="{$pageid}" data-page="_global_menu" data-comment-len="0">
+	<div class="bs-welcome-header">
+		<a id="itemlink" href="organization_group_list.php"  > 
+							{$caption organization_group}					</a>
+	</div>
+
+	</div>
+
 </div>
 </td>
 							</tr>
